struct format and upload front web

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,13 @@
             "request": "launch",
             "mainClass": "top.monoliths.App",
             "projectName": "text-interpreter"
+        },
+        {
+            "type": "java",
+            "name": "Launch App",
+            "request": "launch",
+            "mainClass": "top.monoliths.App",
+            "projectName": "web-server"
         }
     ]
 }
