--- a/web-server/pom.xml
+++ b/web-server/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  
   <parent>
     <artifactId>bangbang101-frame</artifactId>
     <groupId>top.monoliths</groupId>
@@ -8,7 +9,7 @@
   </parent>
 
   <packaging>jar</packaging>
-  <artifactId>text-interpreter</artifactId>
+  <artifactId>web-server</artifactId>
   <version>1.0-SNAPSHOT</version>
 
 </project>
