--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,16 +6,16 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Launch App",
+            "name": "text-interpreter",
             "request": "launch",
-            "mainClass": "top.monoliths.App",
+            "mainClass": "top.monoliths.ti.App",
             "projectName": "text-interpreter"
         },
         {
             "type": "java",
-            "name": "Launch App",
+            "name": "web-server",
             "request": "launch",
-            "mainClass": "top.monoliths.App",
+            "mainClass": "top.monoliths.ws.App",
             "projectName": "web-server"
         }
     ]
