--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
   </properties>
 
   <dependencies>
+
+    <!-- <dependency>
+      <groupId>com.jcraft</groupId>
+      <artifactId>jzlib</artifactId>
+      <version>1.1.3</version>
+    </dependency> -->
+
     <!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
     <dependency>
       <groupId>io.netty</groupId>
@@ -38,12 +45,10 @@
     <!-- test tools -->
 
     <dependency>
-
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
-
     </dependency>
 
     <!-- gson make a json data file -->
@@ -69,35 +74,34 @@
     <!-- log4j  -->
 
     <dependency>
-
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
       <version>1.2</version>
-
+    </dependency>
+    
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.7.25</version>
+      <scope>compile</scope>
     </dependency>
 
     <dependency>
-
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
       <version>2.14.0</version>
-
     </dependency>
 
     <dependency>
-
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
       <version>2.14.0</version>
-
     </dependency>
 
     <dependency>
-
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-jcl</artifactId>
       <version>2.14.0</version>
-
     </dependency>
 
   </dependencies>
