slip web server

--- a/web-config.json
+++ b/web-config.json
@@ -1,6 +1,7 @@
 {
     "local": "localhost",
     "port": 80,
-    "configPath": "C:\\Users\\asu\\Desktop\\pro\\bangbang101-frame\\web",
-    "index": "/index.html"
+    "configPath": "C:\\Users\\monoliths\\Documents\\web\\bangbang101-frame",
+    "home": "/index.html",
+    "debug": false
 }
